# xhand_control_python

./: .gitignore  camera.py  control_two_hand.py  data  data_split.py  double_buffer_client.py  readme.md  record.txt  repeat.py  save.txt  server.py  tmp.py  trans.py  write.py  xhand_control_example.py  xhand_control_left.py
xhand_control_sdk_py/: README.md  README.zh-CN.md  run.sh  setup.py
xhand_control_sdk_py/include/: communiation_interface.hpp  data_type.hpp  error_manager.hpp  ethercat_communication.hpp  ev_boot.h  parse_data.h  serial_communication.hpp  visibility_control.h  xhand_control.hpp
xhand_control_sdk_py/share/soem/cmake/: soemConfig-release.cmake  soemConfig.cmake
xhand_control_sdk_py/share/xhand_control/cmake/: xhand_controlConfig-release.cmake  xhand_controlConfig.cmake
xhand_control_sdk_py/src/: xhand_control.cpp
xhand_control_sdk_py/tests/: CMakeLists.txt
xhand_control_sdk_py/tests/src/: ethercat_test.cpp  serial_test.cpp
xhand_control_sdk_py/xhand_controller.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
